--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -2,13 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "text to image backend",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Senal Ariyaratne",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "openai": "^4.12.4"
   }
 }
